--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
 }
 
 body {
+  position: relative;
   background-color: black;
   height: 100vh;
   display: flex;
@@ -18,12 +19,13 @@ main {
   max-width: 440px;
   padding: 32px;
   border-radius: 16px;
+  margin: 0 0 100px 0;
 }
 
 h1 {
   font: normal 600 24px/24px "Poppins", sans-serif;
   color: white;
-  margin: 24px 0 8px 0;
+  margin: 24px 0;
 }
 
 p {
@@ -48,13 +50,58 @@ main button {
   width: 100%;
   border: none;
   border-radius: 6px;
-  background-color: blueviolet;
-  color: white;
-  font: normal 16px/24px "Poppins", sans-serif;
+  background-color: rgba(255, 102, 0, 1);
+  color: #fff;
+  font: normal bold 16px/24px "Poppins", sans-serif;
+  letter-spacing: 1px;
   transition: filter .2s;
 }
 
 main button:hover {
   cursor: pointer;
   filter: brightness(1.10);
+}
+
+.ball {
+  width: 130px;
+}
+
+.bg {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 200px;
+}
+
+@media(min-width: 992px) {
+  body {
+    justify-content: space-between;
+    margin: 0 0 0 15%;
+  }
+
+  main {
+    margin: 0;
+  }
+
+  .ball {
+    width: 200px;
+  }
+
+  main h1 {
+    font-size: 40px;
+  }
+
+  .bg {
+    width: 400px;
+  }
+}
+
+@media(min-width: 1366px) {
+  body {
+    margin: 0 0 0 20%;
+  }
+
+  .bg {
+    width: 600px;
+  }
 }
