--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+html {
+  overflow: hidden;
+}
+
 body {
   position: relative;
   background-color: black;
@@ -11,6 +15,7 @@ body {
   align-items: center;
   justify-content: center;
   margin: 0;
+  overflow: hidden;
 }
 
 main {
@@ -66,10 +71,10 @@ main button:hover {
   width: 130px;
 }
 
-.hinata {
+.astronauta {
   position: absolute;
-  right: 0;
-  bottom: 0;
+  right: -30px;
+  bottom: -50px;
   width: 170px;
 }
 
@@ -120,7 +125,7 @@ main button:hover {
     margin: 32px 0 0 0;
   }
 
-  .hinata {
+  .astronauta {
     width: 400px;
   }
 }
@@ -130,7 +135,7 @@ main button:hover {
     margin: 0 0 0 20%;
   }
 
-  .hinata {
+  .astronauta {
     width: 600px;
   }
 }
